--- a/advent.cabal
+++ b/advent.cabal
@@ -15,7 +15,7 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib1, Lib2
+  exposed-modules:     Lib1, Lib2, Lib3
   build-depends:       base >= 4.7 && < 5,
                        split, array
   default-language:    Haskell2010
