--- a/advent.cabal
+++ b/advent.cabal
@@ -15,9 +15,9 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib1, Lib2, Lib3
+  exposed-modules:     Lib1, Lib2, Lib3, Lib4
   build-depends:       base >= 4.7 && < 5,
-                       split, array
+                       split, array, parsec
   default-language:    Haskell2010
 
 executable advent-exe
